--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body{
     margin: 0;
 }
 
+main{
+    max-width: 1000px;
+    margin: auto;
+}
+
 /* Banner section */
 
 .banner{
@@ -38,4 +43,68 @@ body{
     border: none;
     border-radius: 5px;
     margin-top: 15px;
+}
+
+section.failure-container {
+    display: flex;
+    align-items: center;
+    gap: 140px;
+    margin: 120px 0px;
+}
+
+.failure-content img {
+    width: 420px;
+}
+
+.failure-text h1 {
+    width: 330px;
+    font-size: 28px;
+    font-weight: 900;
+}
+
+.failure-text p {
+    font-size: 12px;
+    width: 300px;
+}
+
+ul.failure-list li {
+    list-style: none;
+    font-size: 12px;
+    line-height: 25px;
+}
+
+ul.failure-list {
+    padding: 0;
+}
+
+ul.failure-list li i {
+    color: #82d479;
+}
+
+section.plan {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+section.plan h1 {
+    font-size: 30px;
+    font-weight: 800;
+}
+
+.plan-content {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 60px;
+}
+
+.plan-content div img {
+    width: 60px;
+}
+
+.plan-content div h3 {
+    font-weight: 800;
+}
+
+.plan-content span {
+    font-weight: 600;color: #8f8d88;
 }
