--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section.mindset-container {
     padding: 10px 15px;
     border-radius: 5px;
     color: #cb870d;
-    background-color: wheat;
+    background-color: white;
 }
 
 /* footer section  */
